--- a/ui/projectproperty.ui
+++ b/ui/projectproperty.ui
@@ -86,7 +86,7 @@
           <string>FRA</string>
          </property>
          <property name="icon" >
-          <iconset resource="application.qrc" >:/images/france.png</iconset>
+          <iconset resource="../images/application.qrc" >:/france.png</iconset>
          </property>
         </item>
         <item>
@@ -94,7 +94,7 @@
           <string>ENG</string>
          </property>
          <property name="icon" >
-          <iconset resource="application.qrc" >:/images/usa.png</iconset>
+          <iconset resource="../images/application.qrc" >:/usa.png</iconset>
          </property>
         </item>
         <item>
@@ -102,7 +102,7 @@
           <string>DEU</string>
          </property>
          <property name="icon" >
-          <iconset resource="application.qrc" >:/images/germany.png</iconset>
+          <iconset resource="../images/application.qrc" >:/germany.png</iconset>
          </property>
         </item>
         <item>
@@ -110,7 +110,7 @@
           <string>ITA</string>
          </property>
          <property name="icon" >
-          <iconset resource="application.qrc" >:/images/italy.png</iconset>
+          <iconset resource="../images/application.qrc" >:/italy.png</iconset>
          </property>
         </item>
         <item>
@@ -118,7 +118,7 @@
           <string>ESP</string>
          </property>
          <property name="icon" >
-          <iconset resource="application.qrc" >:/images/spain.png</iconset>
+          <iconset resource="../images/application.qrc" >:/spain.png</iconset>
          </property>
         </item>
         <item>
@@ -126,7 +126,7 @@
           <string>POR</string>
          </property>
          <property name="icon" >
-          <iconset resource="application.qrc" >:/images/portugal.png</iconset>
+          <iconset resource="../images/application.qrc" >:/portugal.png</iconset>
          </property>
         </item>
        </widget>
@@ -138,7 +138,7 @@
           <string>NAV/MIC</string>
          </property>
          <property name="icon" >
-          <iconset resource="application.qrc" >:/images/ie_logo.png</iconset>
+          <iconset resource="../images/application.qrc" >:/ie_logo.png</iconset>
          </property>
         </item>
         <item>
@@ -146,7 +146,7 @@
           <string>NAV/NET</string>
          </property>
          <property name="icon" >
-          <iconset resource="application.qrc" >:/images/firefox_logo.png</iconset>
+          <iconset resource="../images/application.qrc" >:/firefox_logo.png</iconset>
          </property>
         </item>
        </widget>
@@ -274,7 +274,7 @@
   <tabstop>cancelButton</tabstop>
  </tabstops>
  <resources>
-  <include location="application.qrc" />
+  <include location="../images/application.qrc" />
  </resources>
  <connections>
   <connection>
