--- a/images/application.qrc
+++ b/images/application.qrc
@@ -1,33 +1,33 @@
 <RCC>
     <qresource prefix="/" >
-        <file>images/CVpublic_meth.png</file>
-        <file>images/CVpublic_var.png</file>
-        <file>images/bug.png</file>
-        <file>images/doc.png</file>
-        <file>images/editcopy.png</file>
-        <file>images/editcut.png</file>
-        <file>images/editpaste.png</file>
-        <file>images/exit.png</file>
-        <file>images/fileclose.png</file>
-        <file>images/filenew.png</file>
-        <file>images/fileopen.png</file>
-        <file>images/fileprint.png</file>
-        <file>images/filesave.png</file>
-        <file>images/filesaveall.png</file>
-        <file>images/filesaveas.png</file>
-        <file>images/find.png</file>
-        <file>images/firefox_logo.png</file>
-        <file>images/france.png</file>
-        <file>images/germany.png</file>
-        <file>images/ie_logo.png</file>
-        <file>images/italy.png</file>
-        <file>images/next.png</file>
-        <file>images/nogood.png</file>
-        <file>images/portugal.png</file>
-        <file>images/redo.png</file>
-        <file>images/spain.png</file>
-        <file>images/splash.png</file>
-        <file>images/undo.png</file>
-        <file>images/usa.png</file>
+        <file>CVpublic_meth.png</file>
+        <file>CVpublic_var.png</file>
+        <file>bug.png</file>
+        <file>doc.png</file>
+        <file>editcopy.png</file>
+        <file>editcut.png</file>
+        <file>editpaste.png</file>
+        <file>exit.png</file>
+        <file>fileclose.png</file>
+        <file>filenew.png</file>
+        <file>fileopen.png</file>
+        <file>fileprint.png</file>
+        <file>filesave.png</file>
+        <file>filesaveall.png</file>
+        <file>filesaveas.png</file>
+        <file>find.png</file>
+        <file>firefox_logo.png</file>
+        <file>france.png</file>
+        <file>germany.png</file>
+        <file>ie_logo.png</file>
+        <file>italy.png</file>
+        <file>next.png</file>
+        <file>nogood.png</file>
+        <file>portugal.png</file>
+        <file>redo.png</file>
+        <file>spain.png</file>
+        <file>splash.png</file>
+        <file>undo.png</file>
+        <file>usa.png</file>
     </qresource>
 </RCC>
