Completion sur la valeur : Sur le nom des variables

--- a/ui/mainform.ui
+++ b/ui/mainform.ui
@@ -573,7 +573,7 @@
   <customwidget>
    <class>TabEditor</class>
    <extends>QTabWidget</extends>
-   <header>src/tabeditor.h</header>
+   <header>../src/tabeditor.h</header>
   </customwidget>
  </customwidgets>
  <resources>
